Stop controlling overlays visibility with classes on lyrics-box, it's not right. Do it right instead -- with classes on the overlays themselves

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,6 +94,7 @@ a#lastfm-control:hover {
     width: 100%;
     z-index: 50;
     background: rgba(0, 0, 0, 0.25);
+    opacity: 0;
 
     transition: 0.3s;
     -o-transition: 0.3s;
@@ -101,11 +102,14 @@ a#lastfm-control:hover {
     -moz-transition: 0.3s;
     -webkit-transition: 0.3s;
 }
+
+#overlays-box.visible { opacity: 1; }
 
 .overlay {
     position: absolute;
     width: 100%;
     height: 100%;
+    opacity: 0;
 
     transition: 0.3s;
     -o-transition: 0.3s;
@@ -113,6 +117,8 @@ a#lastfm-control:hover {
     -moz-transition: 0.3s;
     -webkit-transition: 0.3s;
 }
+
+.overlay.visible { opacity: 1; }
 
 
 /* Spinner */
@@ -166,20 +172,6 @@ a#lastfm-control:hover {
 #lyrics-box {
     background: white;
 }
-
-
-#lyrics-box #overlays-box { opacity: 0; }
-#lyrics-box #message-overlay { opacity: 0; }
-#lyrics-box #loading-overlay { opacity: 0; }
-
-#lyrics-box.message #overlays-box { opacity: 1; }
-#lyrics-box.message #message-overlay { opacity: 1; }
-#lyrics-box.message #loading-overlay { opacity: 0; }
-
-#lyrics-box.loading #overlays-box { opacity: 1; }
-#lyrics-box.loading #message-overlay { opacity: 0; }
-#lyrics-box.loading #loading-overlay { opacity: 1; }
-
 
 #lyrics {
     position: relative;
